# rosdyn_ik_solver

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin1.xml  plugin2.xml  plugin_ros2.xml  rosdyn_ik_solver.repos
config/: cnr_param.config  default_logger.yaml  ik_solver.yaml  kuka.yaml  params.yaml  params_1.yaml  params_2.yaml  params_misc.yaml  robot_description.yaml
include/rosdyn_ik_solver/: rosdyn_ik_solver.h
launch/: test.launch
src/: node.cpp
src/rosdyn_ik_solver/: rosdyn_ik_solver.cpp
