<?xml version="1.0"?>
<package format="3">
  <name>rosdyn_ik_solver</name>
  <version>0.0.0</version>
  <description>The rosdyn_ik_solver package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>

  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend>ik_solver_msgs </depend>

  <depend condition="$ROS_VERSION == 1">roscpp           </depend>
  <depend condition="$ROS_VERSION == 1">rosdyn_core      </depend>

  <depend condition="$ROS_VERSION == 2">rclcpp           </depend>

  <depend>ik_solver      </depend>
  <depend>pluginlib      </depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <ik_solver plugin="${prefix}/plugin.xml"/> <!-- ROS1 -->
  </export>
</package>
